[package]
name = "rssol"
version = "0.3.0"
authors = ["Erik Larson <erik@welarson.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arr_macro = "0.1"
hamcrest2 = "*"
rand = {version = "0.7", features = ["wasm-bindgen"]}
